<resources>
    <string name="app_name">PokeMon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resistances">Resistances</string>
    <string name="weakness">Weakness</string>
    <string name="abilities">Abilities</string>
    <string name="attacks">Attacks</string>
    <string name="level_n_a">Level: N/A</string>
    <string name="sub_type">Sub Type</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="_100_hp">100 hp</string>
    <string name="type_n_a">Type: N/A</string>
    <string name="no_data_found">No Data Found</string>
    <string name="detail">Detail</string>
</resources>