<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/_12dp"
    android:elevation="@dimen/_8dp"
    android:layout_marginTop="@dimen/_12dp"
    android:layout_marginHorizontal="@dimen/_8dp"
    android:clipToPadding="true"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_4dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/_12dp"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv" />

        <TextView
            android:background="@drawable/bg_rounded"
            android:id="@+id/tvHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_hp"
            android:textSize="@dimen/_12sp"
            android:padding="@dimen/_4dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_n_a"
            android:layout_marginStart="@dimen/_12dp"
            android:textSize="@dimen/_14sp"
            android:layout_marginTop="@dimen/_4dp"
            android:layout_marginBottom="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvType" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_n_a"
            android:textSize="@dimen/_14sp"
            android:layout_margin="@dimen/_12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>